objects/vlocity_cmt__ManualQueueMember__c.object
<CustomObject>
    <description>Manual Queue</description>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Matrix. Used to identify the Matrix across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ManualQueueId__c</fullName>
        <label>Manual Queue</label>
        <referenceTo>vlocity_cmt__ManualQueue__c</referenceTo>
        <relationshipLabel>Manual Queue Members</relationshipLabel>
        <relationshipName>ManualQueueMemebers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Manual Queue Memebers</relationshipLabel>
        <relationshipName>ManualQueueMemebers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Manual Queue Member</label>
    <nameField>
        <label>Manual Queue Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manual Queue Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>